Activated symlinking and added all non-global settings to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ pip-log.txt
 uploads/
 settings.py
 docs/_build
+/djangocon/conf/*
+!/djangocon/conf/__init__.py
+!/djangocon/conf/global_settings.py
