Drastically simplifying blog model

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ django-gravatar
 django-staticfiles
 Fabric
 South
-markdown2
-django-markitup
--e git://github.com/alex/django-taggit.git@c56590729ad723bdd613de17300ff0a4b62a7e97#egg=django_taggit-0.1_pre-py2.6-dev
+smartypants==1.6.0.3
+Markdown==2.0.3
 gunicorn==0.6.5
